# pyLoL-v2

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.github/: pull_request_template.md
autoLeague/: __init__.py  config.py
debug/: analyze_matching_issues.py  undefined_ward_analysis.csv  undefined_ward_champions.csv  visualize_timeline_only.py
docs/: investigation_instructions.md  investigation_timeline_only.md  phase3_ward_coordinate_extraction.md  phase5_vision_score.md  project_status_20260104.md  ward_detection_planB.md  ward_type_classification.md
matchids/: sample_challenger_patch25_13_1.csv  sample_challenger_patch25_13_1.csv.bak_20260108_032957
models/: baseline_10min.joblib  baseline_15min.joblib  baseline_20min.joblib  baseline_25min.joblib  baseline_5min.joblib  baseline_grid_10min.joblib  baseline_grid_15min.joblib  baseline_grid_20min.joblib  baseline_grid_25min.joblib  baseline_grid_5min.joblib  baseline_riot_10min.joblib  baseline_riot_15min.joblib  baseline_riot_20min.joblib  baseline_riot_25min.joblib  baseline_riot_5min.joblib  baseline_tactical_10min.joblib  baseline_tactical_15min.joblib  baseline_tactical_20min.joblib  baseline_tactical_25min.joblib  baseline_tactical_5min.joblib  vision_importance.npy  vision_predictor.joblib  vision_predictor_metrics.json  yolo_supported_champions.csv
notebooks/: 01_get_matchids.ipynb  02_download_replays.ipynb  03_filtering_replays.ipynb  04_run_client.ipynb  05_ward_inference.ipynb  06_ward_batch_processing.ipynb  06_ward_batch_processing_colab.ipynb  07_vision_score.ipynb  08_win_prediction.ipynb  08_win_prediction_colab.ipynb
reports/: JP1-555639648.html  JP1-555644427.html  JP1-555650841.html  JP1-555658734.html  JP1-555675575.html  JP1-555685439.html  JP1-555689813.html  JP1-555696773.html  JP1-555711124.html  JP1-555718714.html  JP1-555728273.html  JP1-555818121.html  JP1-555821587.html  JP1-555825286.html  JP1-555831098.html  JP1-555835514.html  JP1-555841779.html  JP1-555848143.html  JP1-555876944.html  index.html  (+6 more)
(+63 files in other folders)
