[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autoleague"
version = "2.0.0"
description = "League of Legends replay data collection and vision score analysis library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "hanueluni1106", email = "sykim1106@naver.com" },
]
keywords = ["League of Legends", "Riot API", "Replay", "Data Collection", "YOLO", "Vision Score"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28",
    "aiohttp>=3.8",
    "tqdm>=4.60",
    "python-dotenv>=1.0",
    "pandas>=1.5",
    "numpy>=1.24",
    "scikit-learn>=1.2",
    "joblib>=1.2",
    "scipy>=1.10",
]

[project.optional-dependencies]
replay = [
    "mss>=6.0",
    "opencv-python>=4.5",
    "pyautogui>=0.9",
    "pydirectinput>=1.0",
    "psutil>=5.9",
]
gpu = [
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0",
]
viz = [
    "matplotlib>=3.6",
    "seaborn>=0.12",
]
lgbm = [
    "lightgbm>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "responses>=0.23",
]
all = ["autoleague[replay,gpu,viz,lgbm]"]

[project.urls]
Repository = "https://github.com/hanueluni1106/pyLoL-v2"

[tool.setuptools.packages.find]
include = ["autoLeague*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
